# HunterAi0.1

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_findings.py  0003_advanced_finding_fields.py
backend/app/: __init__.py  db_cli.py  main.py  recon_cli.py  scanner_cli.py  tools_cli.py
backend/app/application/: __init__.py  ports.py
backend/app/application/use_cases/: __init__.py  run_recon.py  run_scan.py  run_vulnerability_scan.py  start_scan.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  finding.py  http.py  recon.py  scan.py  scanner.py  scanner_config.py  target.py  tool.py
backend/app/domain/ports/: __init__.py  http.py  persistence.py  recon.py  scanner.py  tools.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/execution/: __init__.py
backend/app/infrastructure/http/: __init__.py
backend/app/infrastructure/persistence/: __init__.py  database.py  models.py  repositories.py
backend/app/infrastructure/recon/: __init__.py  (+2 more)
backend/app/interfaces/: __init__.py
backend/tests/: scanner_fakes.py  test_api_scans.py  test_api_tools.py  test_finding.py  test_health.py  test_http.py  test_persistence.py  test_recon_parsers.py  test_run_recon.py  test_run_scan.py  test_scanner_engine.py  test_scanner_infra.py  test_scanner_plugins.py  test_scanner_registry.py  test_target.py  test_tools.py
(+64 files in other folders)
